--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "export": "next build",
+    "deploy": "next build && gh-pages -d out"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
